spacing fix

--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,9 +1,11 @@
 body {background-color: green;
-text-align:center;
-color:white;}
+	text-align:center;
+	color:white;
+}
 
 h1{font-size: 80px;
-font-style: bold;}
+	font-style: bold;
+}
 
 #slogan {color:orange;
 		text-transform:uppercase;
